--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="contact-me">
         <h2 class="subtitles">¡Ponte en contacto conmigo!</h2>
         <h3>¿También estás aprendiendo desarrollo web como yo?</h3>
-        <p style="margin-bottom: 62px;">Hablemos sobre tips y consejos que hayamos absorbido en el proceso de aprendizaje.
+        <p style="margin-bottom: 62px;">Hablemos sobre tips y consejos que hayamos obtenido en el proceso de aprendizaje.
             <br>Gracias por visitar mi página</p>
         <a class="btn" href="mailto:name@email.com">Escríbeme</a>
       </div>
